--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    font-family: 'Oswald', sans-serif;
+    background-color: #300a09;
+    color: #f0e7d5;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+}
+
+/*header*/
+header{
+    background-color: #f0e7d5;
+    color: #53161d;
+    height: 30px;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    padding: 10px 20px;
+}
+
+h1{
+    margin: 0;
+}
+
+ul{
+    display:flex;
+    gap:20px;
+    list-style:none;
+    padding:0;
+    margin:0;
+}
+
+/*footer*/
+footer{
+    background-color: #f0e7d5;
+    color: #53161d;
+    text-align: center;
+    padding: 20px 0;
+    width: 100%;
+}
