--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,7 +6,7 @@
 
 body{
     font-family: 'Oswald', sans-serif;
-    background-color: #300a09;
+    background-color: #440000;
     color: #f0e7d5;
     min-height: 100vh;
     display: flex;
@@ -47,6 +47,10 @@ footer{
     text-align: center;
     padding: 20px 0;
     width: 100%;
+}
+
+input, textarea{
+    color: #300a09;
 }
 
 /*login-formulier*/
@@ -166,4 +170,49 @@ label{
 
 .register-wrapper p{
     color: #f0e7d5;
+}
+
+/*contactpagina*/
+.contact-wrapper{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.contact-form{
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+}
+
+.contact-form form div{
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-form form div label{
+    color: #f0e7d5;
+    display: block;
+}
+
+.contact-form form div input, textarea{
+    border-radius: 8px;
+    width: 400px;
+}
+
+.contact-form form div button{
+    width: fit-content;
+    padding: 10px 20px;
+    margin-top: 8px;
+    background-color: #300a09;
+    border-radius: 5px;
+    color: #f0e7d5;
+}
+
+.line{
+    border: #f0e7d5 solid 2px;
+    height: 400px;
+    border-radius: 5px;
 }
